docs/7.55/md/abencds_v2_view_client_handling.md
---
title: "ABAP CDS - Client Handling in CDS View Entities"
description: |
  For a CDS view entity(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_v2_view_glosry.htm 'Glossary Entry'), client handling is done implicitly and automatically by filtering the client session variable(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensession_vari
version: "7.55"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_v2_view_client_handling.htm"
abapFile: "abencds_v2_view_client_handling.htm"
keywords: ["select", "do", "if", "try", "method", "data", "abencds", "view", "client", "handling"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds.htm) →  [ABAP CDS - Data Definitions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_entities.htm) →  [ABAP CDS - DDL for Data Definitions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_f1_ddl_syntax.htm) →  [ABAP CDS - CDS Entities](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_view_entity.htm) →  [ABAP CDS - View Entities](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_v2_views.htm) → 

ABAP CDS - Client Handling in CDS View Entities

For a [CDS view entity](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), client handling is done implicitly and automatically by filtering the client [session variable](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensession_variable_glosry.htm "Glossary Entry") [$session.client](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_session_variable_v2.htm).

You cannot manipulate this. Client handling annotations are not available.

-   [Determining Client Dependency](#abencds-v2-view-client-handling-1--------determining-client-handling---@ITOC@@ABENCDS_V2_VIEW_CLIENT_HANDLING_2)

-   [Properties of Client-Dependent CDS View Entities](#abencds-v2-view-client-handling-3---determining-client-dependency--the--client-dependency--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenclient-dependency-glosry-htm--glossary-entry---of-a-view-is-determined-by-the--data-sources--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-data-source-v2-htm--used-------if-one-of-the-data-sources-used-in-the-view-is-client-dependent--the-view-is--client-dependent--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenclient-dependent-glosry-htm--glossary-entry---------if-none-of-the-data-sources-used-in-the-view-is-client-dependent--the-view-is--client-independent--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenclient-independent-glosry-htm--glossary-entry-----determining-client-handling--if-a-cds-view-entity-is-client-dependent--then-the-client-handling-is-performed-by-filtering-the-client--session-variable--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abensession-variable-glosry-htm--glossary-entry-----session-client--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-session-variable-v2-htm---the-session-variable-algorithm-expands-the--joins--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenjoin-glosry-htm--glossary-entry---of-the-view-entity-implicitly-as-shown-in-the-following-table--this-applies-to-joins-specified-explicitly-using-join--as-well-as-to-instances-of-joins-created-when-using--sql-path-expressions--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abensql-path-expression-glosry-htm--glossary-entry-----left-side--right-side--inner-join--left-outer-join--right-outer-join--cross-join--client-dependent--client-dependent--compares-the-client-columns-in-the-on-condition--compares-the-client-columns-in-the-on-condition--compares-the-client-columns-in-the-on-condition--transforms-the-cross-join-to-an-inner-join-using-an-on-condition-for-the-client-columns--client-independent--client-dependent------compares-the-client-column-with-the-value-of-the--session-variable--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abensession-variable-glosry-htm--glossary-entry-----session-client--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-session-variable-v2-htm--in-the-on-condition----------client-dependent--client-independent----------compares-the-client-column-with-the-value-of-the--session-variable--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abensession-variable-glosry-htm--glossary-entry-----session-client--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-session-variable-v2-htm--in-the-on-condition------client-independent--client-independent------------------in-addition--when-client-dependent-database-tables-are-accessed---where--clauses--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-where-clause-v2-htm--with-comparisons-of-the-client-columns-with-the--session-variable--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abensession-variable-glosry-htm--glossary-entry-----session-client--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-session-variable-v2-htm--are-added-to-the-view-implicitly--if-only-client-dependent--cds-entities--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-entity-glosry-htm--glossary-entry---are-accessed--however--no-clauses-are-added---it-is-not-possible-to-access-the-data-of-different-clients-in-a-single-read---the-addition--using--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abapselect-client-htm--of-the-statement--select--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abapselect-htm--for-switching--implicit-client-handling--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenopen-sql-client-handling-htm--is-not-allowed-for-cds-view-entities--the-obsolete-addition--client-specified--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abapselect-client-obsolete-htm--is-not-allowed-either---example--the-following-cds-view-entity-demo--cds--client--handling-defines-different-kinds-of--joins--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenjoin-glosry-htm--glossary-entry-----left-outer-join--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenleft-outer-join-glosry-htm--glossary-entry-----inner-join--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abeninner-join-glosry-htm--glossary-entry----and--right-outer-join--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abenright-outer-join-glosry-htm--glossary-entry----between-a-client-independent-database-table--t000--and-a-client-dependent-database-table--demo--sales--order---it-also-defines-and-uses-an--association--https---help-sap-com-doc-abapdocu-755-index-htm-7-55-en-us-abencds-association-glosry-htm--glossary-entry---between-the-same-client-independent-database-table--t000--and-the-same-client-dependent-database-table--demo--sales--order----AccessControl.authorizationCheck: #NOT\_REQUIRED
@EndUserText.label: 'CDS View entity\_client handling'
define view entity DEMO\_CDS\_CLIENT\_HANDLING
  as select from
                       t000             as client\_independent
      left outer join  demo\_sales\_order as \_LeftOuter
        on \_LeftOuter.id = client\_independent.cccategory
      inner join       demo\_sales\_order as \_Inner
        on \_Inner.id = client\_independent.cccategory
      right outer join demo\_sales\_order as \_RightOuter
        on \_RightOuter.id = client\_independent.cccategory
    association \[0..1\] to demo\_sales\_order as \_Assoc
      on \_Assoc.id = client\_independent.cccategory
    {
      key \_Assoc.so\_key,
          \_Assoc.id,
          \_Inner.id      as id\_inner,
          \_LeftOuter.id  as id\_LeftOuter,
          \_RightOuter.id as id\_RightOuter,
          client\_independent.cccategory
    }
    where client\_independent.mtext = 'SAP AG Konzern'

SQL statement created on the database:

The image below shows the SQL statement that is generated on the [SAP HANA database](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenhana_database_glosry.htm "Glossary Entry"). For the left outer join, an ON condition is added that compares the client field of the database table DEMO\_SALES\_ORDER with the current client. The current client is determined using the built-in SAP HANA function [SESSION\_CONTEXT ('CDS\_CLIENT')](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenhana_session_variables.htm), which is the equivalent to the session variable $session.client in ABAP CDS. In the same way, a WHERE clause is added that compares the client of the database table with the current client.

![Figure](abdoc_client_handling.png)

Properties of Client-Dependent CDS View Entities

Since client handling is performed completely implicitly in CDS view entities, a client field is not allowed in the SELECT list of a view entity. The result set of an ABAP SQL read on a CDS view entity can never contain a client column either.

Hints

-   When client-dependent views are accessed via [Native SQL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennative_sql_glosry.htm "Glossary Entry") or in an [AMDP method](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenamdp_method_glosry.htm "Glossary Entry"), only the [database object](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendb_object_glosry.htm "Glossary Entry") is accessed. The [client ID](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenclient_identifier_glosry.htm "Glossary Entry") must be specified as usual and only data in the current client should be accessed.

-   When the [database object](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendb_object_glosry.htm "Glossary Entry") of a client-dependent [CDS view entity](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_v2_view_glosry.htm "Glossary Entry") is accessed using Native SQL or AMDP, please note:

-   The [session variable](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensession_variable_glosry.htm "Glossary Entry") [$session.client](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_session_variable_v2.htm) is usually used implicitly in the view. This is guaranteed only on [SAP HANA databases](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenhana_database_glosry.htm "Glossary Entry") used as [standard AS ABAP databases](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstandard_db_glosry.htm "Glossary Entry") under the name [CDS\_CLIENT](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenhana_session_variables.htm). On other platforms, the existence and content of the session variable are not guaranteed outside of an ABAP SQL access, and this can produced unexpected behavior or programs may crash.

-   No separate WHERE condition can be used that selects a client other than the session variable and the database-specific variant of the [session variable](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensession_variable_glosry.htm "Glossary Entry") [$session.client](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_session_variable_v2.htm) must have the required value in Native SQL or AMDP reads. Outside an ABAP SQL access, it contains the current client by default.

The last point is particularly important for [client handling](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenamdp_client_handling.htm) in general [AMDP procedure implementations](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenamdp_procedure_method_glosry.htm "Glossary Entry") on the SAP HANA database, which are called like regular methods in ABAP. When a database object is accessed, the value of the corresponding HANA session variable [CDS\_CLIENT](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenhana_session_variables.htm) must be set explicitly using the addition [AMDP OPTIONS CDS SESSION CLIENT](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapmethods_amdp_options.htm) in the declaration of the AMDP method. If not, a syntax error occurs. In an [AMDP function implementation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenamdp_function_method_glosry.htm "Glossary Entry") that is used as a [CDS](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_table_function_glosry.htm "Glossary Entry") table function in ABAP SQL, however, the HANA session variable CDS\_CLIENT is filled with the content defined there.